# spectrumlab

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
spectrumlab/: __init__.py  alias.py  types.py  typing.py  utils.py
spectrumlab/background/: __init__.py  background.py  base_background.py  savitzky_golay_background.py
spectrumlab/calibration_curve/: __init__.py  calibration_curve.py  metrology.py
spectrumlab/concentration_calibration/: __init__.py  concentration_calibration.py  metrology.py
spectrumlab/core/: grid.py
spectrumlab/core/approximate/: base_variables.py  scope.py  variables.py
spectrumlab/core/grid/: __init__.py  grid.py  handler.py  shape.py  utils.py
spectrumlab/element/: __init__.py  element.py  periodic_table.py
spectrumlab/element/database/: __init__.py  database v0.01.csv
spectrumlab/emulation/: __init__.py  _peak.py  adc.py  aperture.py  apparatus.py  curve.py  detector.py  device.py  emulation.py  experiment.py  intensity.py  line.py  noise.py  spectrum.py
spectrumlab/emulation/aperture/: __init__.py  aperture.py
spectrumlab/emulation/calibration_curve/: __init__.py  calibration_curve.py  concentration_limits.py  exceptions.py  intensity_limits.py  metrology.py
spectrumlab/emulation/line/: line.py  (+1 more)
spectrumlab/emulations/: adc.py  adcs.py  apparatus.py  detector.py  detectors.py  device.py  intensity.py  spectrum.py
spectrumlab/grid/: filter.py  grid.py  handler.py  shape.py  utils.py
spectrumlab/line/: line.py  utils.py
spectrumlab/peak/: __init__.py  analyte_peak.py  base_peak.py  blink_peak.py  peak.py  units.py
spectrumlab/picture/: __init__.py  alpha.py  color.py  colormap.py  config.py  format.py  label.py  utils.py
spectrumlab/spectrum/: __init__.py  base_spectrum.py  high_resolution_spectrum.py  interpolate.py  mask.py  shake.py  spectrum.py
spectrumlab/wavelength_calibration/: exceptions.py  wavelength_calibration.py
src/spectrumlab/: __init__.py  curves.py  detectors.py  types.py  utils.py
tests/: _test_noise.py
tests/calibration_curve/: test_emitted_spectra.py  test_metrology.py
tests/concentration_calibration/: test_emitted_spectra.py  test_metrology.py
tests/element/: test_element.py
tests/elements/: test_element.py
tests/emulation/: test_aperture.py  test_apparatus.py  test_curve.py  test_emulation.py  test_peak.py
(+408 files in other folders)
