[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrumlab"
version = "0.9.2"
description = "`spectrumlab` is a base library designed to emulate and process spectra."
readme = "README.md"
keywords = [
    "spectroscopy",
    "atomic emission spectroscopy",
    "atomic absorption spectroscopy",
    "linear detector",
]
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
license = {text = "MIT License"}
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]
requires-python = "==3.12.*"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
dev = [
    {include-group = "linting"},
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt", "*.xml"]
